fix some styles

--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
       <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <form id="addContractForm">
-          <input type="checkbox" id="mandatoryCheckbox">
-          <label for="mandatoryCheckbox">اجباری</label>
           <br>
+          <div>
+            <input type="checkbox" id="mandatoryCheckbox">
+            <label for="mandatoryCheckbox">اجباری</label>
+          </div>
           <input type="text" id="contractHeader" placeholder="هدر قرارداد" required>
           <textarea id="contractText" placeholder="متن قرارداد" required></textarea>
           <button type="submit">اضافه کردن قرارداد</button>
@@ -114,26 +116,26 @@
         <div class="footer-desktop-item"><i class="fas fa-sliders-h"></i> پنل</div>
       </div>
       <div class="footer-mobile">
-        <div class="footer-mobile-item">
+        <a class="footer-mobile-item">
           <i class="fas fa-home"></i>
           <span>خانه</span>
-        </div>
-        <div class="footer-mobile-item">
+        </a>
+        <a class="footer-mobile-item">
           <i class="fas fa-cog"></i>
           <span>خدمات</span>
-        </div>
-        <div class="footer-mobile-item">
+        </a>
+        <a class="footer-mobile-item">
           <i class="fas fa-comment-alt"></i>
           <span>گفت‌و‌گو</span>
-        </div>
-        <div class="footer-mobile-item">
+        </a>
+        <a class="footer-mobile-item">
           <i class="fas fa-lightbulb"></i>
           <span>نور</span>
-        </div>
-        <div class="footer-mobile-item">
+        </a>
+        <a class="footer-mobile-item">
           <i class="fas fa-sliders-h"></i>
           <span>پنل</span>
-        </div>
+        </a>
       </div>
     </div>
     <div class="footer-address">آدرس شرکت شما</div>
