--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
           <button type="submit">اضافه کردن قرارداد</button>
         </form>
       </div>
-    </div>    
+    </div>   
+    <div class="modal" id="myModal2">
+      <div class="modal-content">
+        <span class="close" onclick="closeModal2()">&times;</span>
+        <br><br>
+        <p id="modalText">متن قرارداد کامل اینجا قرار می‌گیرد.</p>
+      </div>
+    </div> 
   </main>
   <footer>
     <div class="footer-content">
@@ -142,6 +149,8 @@
   </footer>
   
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+  <script src="s2.js"></script>
+
 </body>
 </html>
