Checking the connection to the backend

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   </div>
   <div class="overlay"></div>
   <main>
+    <h2>
+      پروژه را با 
+      node app.js 
+      اجرا کرده تا لیست نمایش داده شود
+    </h2>
     <div class="form-wizard">
       <div class="stage-display">
         <div class="stage-half-line blue-line"></div>
@@ -149,8 +154,7 @@
   </footer>
   
 
-  <!-- <script src="script.js"></script> -->
-  <script src="s2.js"></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
